init commit JDWP section in Java gist